--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-project",
-  "version": "0.0.1",
+  "name": "new-project",
+  "version": "0.1.0",
   "description": "NONE",
   "repository": "NONE",
   "author": "",
@@ -8,76 +8,77 @@
   "private": true,
   "scripts": {
     "watch": "webpack --env.NODE_ENV=development -w --hide-modules --env.watch",
-    "start": "webpack-dev-server --env.NODE_ENV=development -w --env.watch",
-    "build": "node $NODE_DEBUG_OPTION ./node_modules/.bin/webpack --env.NODE_ENV=production -p",
-    "build-dev": "node $NODE_DEBUG_OPTION ./node_modules/.bin/webpack --env.NODE_ENV=development",
+    "start": "webpack-dev-server --env.NODE_ENV=development --env.watch",
+    "build": "webpack --env.NODE_ENV=production -p",
+    "build-dev": "webpack --env.NODE_ENV=development",
     "optimize": "webpack --env.NODE_ENV=production --env.optimize --profile",
     "optimize-dev": "webpack --env.NODE_ENV=development --env.optimize --profile"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.34",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.34",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.34",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34",
-    "autoprefixer": "^7.1.5",
-    "babel-eslint": "^8.0.3",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.40",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.40",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "autoprefixer": "^8.1.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "classnames": "^2.2.5",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.2.3",
+    "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
     "ejs-html-loader": "^3.1.0",
-    "eslint": "^4.9.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint": "^4.18.2",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-vue": "4.0.0-beta.2",
+    "eslint-plugin-vue": "4.3",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "foundation-sites": "^6.4.3",
-    "fs-extra": "^4.0.2",
-    "html-loader": "^0.5.1",
+    "fs-extra": "^5.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin-for-multihtml": "^2.30.2",
     "http-proxy-middleware": "^0.17.4",
     "imagemin": "^5.3.1",
     "imagemin-gifsicle": "^5.2.0",
-    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-mozjpeg": "^7.0.0",
     "imagemin-optipng": "^5.2.1",
-    "imagemin-svgo": "^5.2.2",
-    "imagemin-webpack": "^1.1.2",
-    "imports-loader": "^0.7.1",
+    "imagemin-svgo": "^6.0.0",
+    "imagemin-webpack": "^2.0.0",
+    "imports-loader": "^0.8.0",
     "inline-chunk-manifest-html-webpack-plugin": "2.0.0",
     "jquery": "^3.2.1",
     "metalsmith": "^2.3.0",
     "name-all-modules-plugin": "^1.0.1",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.7.2",
     "on-build-webpack": "^0.1.0",
     "ora": "^1.3.0",
     "portfinder": "^1.0.13",
     "postcss": "^6.0.12",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.1",
     "promise": "^8.0.1",
     "prop-types": "^15.6.0",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.19.0",
-    "thread-loader": "^1.1.2",
-    "url-loader": "^0.6.2",
+    "thread-loader": "^1.1.5",
+    "url-loader": "^1.0.1",
     "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.7.1",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-chunk-hash": "^0.5.0",
+    "webpack-cli": "^2.0.10",
     "webpack-config-utils": "^2.3.0",
-    "webpack-dev-server": "^2.9.2",
+    "webpack-dev-server": "^2.11.1",
     "webpack-ignite": "1.0.2",
-    "webpack-manifest-plugin": "2.0.0-rc.1",
+    "webpack-manifest-plugin": "2.0.0-rc.2",
     "whatwg-fetch": "^2.0.3"
   },
   "browserslist": [
